# swifttool

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
swifttool/: client.py  diskinfo.py  manager.py  ring_defintion.py  utils.py
