[metadata]
name = swifttool
version = 0.0.1 
description = a tool that helps configure swift rings
author = Craig Tracey
author-email = craigtracey@gmail.com
home-page = https://github.com/blueboxgroup/swifttool
include_package_data = True
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python

[entry_points]
console_scripts = 
    swifttool = swifttool.client:main

[file]
packages = 
    swiftttool
